<resources>
    <string name="app_name">Spring 3y4</string>



    <string name="registro">Registro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login">Login</string>
   <string name="confirmar_contrase_a">Confirmar contraseña</string>
</resources>