<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".vistas.RegistroActivity">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:textColor="@color/colorOnPrimary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nombre"
        app:startIconDrawable="@drawable/ic_nombre"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_correo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:hint="@string/correo"
        app:startIconDrawable="@drawable/ic_email"
        app:layout_constraintTop_toBottomOf="@+id/til_nombre"
        app:layout_constraintEnd_toEndOf="@+id/til_nombre"
        app:layout_constraintStart_toStartOf="@+id/til_nombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_contraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:hint="@string/contrase_a"
        app:startIconDrawable="@drawable/ic_password"
        app:layout_constraintEnd_toEndOf="@+id/til_correo"
        app:layout_constraintStart_toStartOf="@+id/til_correo"
        app:layout_constraintTop_toBottomOf="@+id/til_correo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirmarContra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:hint="@string/confirmar_contrase_a"
        app:startIconDrawable="@drawable/ic_password"
        app:layout_constraintEnd_toEndOf="@+id/til_contraseña"
        app:layout_constraintStart_toStartOf="@+id/til_contraseña"
        app:layout_constraintTop_toBottomOf="@+id/til_contraseña">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_confirmarContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/b_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/boton_estilo"
        android:text="Registrar"
        app:backgroundTint="@color/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_confirmarContra"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>