<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".vistas.LoginActivity">


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_correo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/b_login"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_contraseña"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/rl_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_login"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/ll_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_olvidocontra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorOnPrimary"
                android:text="Olvido su contraseña?"/>

            <TextView
                android:id="@+id/tv_registrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorOnPrimary"
                android:text="Registrarme"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_registrar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="UNAB Mision TIC 2021"
            android:textColor="@color/colorOnPrimary"
            android:textSize="24dp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>